# bioparse

./: .travis.yml  Bio-Parse-Sequence-FastQ.html  Bio-Parse-Sequence-Fasta.html  Bio-Parse-Sequence-Phd.html  Bio-Parse-Sequence-SequenceParser.html  README.md  benchmarks.html  benchmarks.html -j  bioparse.cabal  bioparse.haddock  doc-index.html  index-frames.html  index.html  mini_Bio-Parse-Sequence-FastQ.html  mini_Bio-Parse-Sequence-Fasta.html  mini_Bio-Parse-Sequence-Phd.html  mini_Bio-Parse-Sequence-SequenceParser.html
bench/: Benchmark.hs  README.md  test.fq  test.phd
scripts/: deploy-haddock-manually.sh
src/Bio/Parse/Sequence/: FastQ.hs  Fasta.hs  Phd.hs  SequenceParser.hs
test/: Test.hs
