name:                bioparse
version:             0.1.0.0
synopsis:            A simple library for parsing various bioinformatics sequence formats
-- description:
homepage:            https://github.com/relrod/bioparse
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Bioinformatics, Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
  exposed-modules:     Bio.Parse.Sequence.Fasta
                     , Bio.Parse.Sequence.FastQ
                     , Bio.Parse.Sequence.SequenceParser
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , biocore >= 0.3.1 && < 0.4
                     , bytestring >= 0.10 && < 0.11
                     , lens >= 4.4 && < 4.7
                     , parsers >= 0.12.1 && < 0.13
                     , trifecta >= 1 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4 && < 5
                     , lens >= 4.4 && < 4.7
                     , parsers >= 0.12.1 && < 0.13
                     , trifecta >= 1 && < 2
                     , tasty >= 0.8
                     , tasty-hunit
                     --, tasty-golden >= 2.2
                     , bioparse
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      . bench
  main-is:             Benchmark.hs
  build-depends:       base >= 4 && < 5
                     , biocore >= 0.3.1 && < 0.4
                     , bytestring >= 0.10 && < 0.11
                     , criterion >= 1 && < 2
                     , lens >= 4.4 && < 4.7
                     , parsers >= 0.12.1 && < 0.13
                     , trifecta >= 1 && < 2
                     , bioparse
                       -- Other parsing libs we're testing against
                     , biofasta >= 0.0.3 && < 0.1
  default-language:    Haskell2010
  ghc-options:         -O2
                       -fmax-simplifier-iterations=10
                       -fdicts-cheap
                       -fspec-constr-count=6